updated pom file with dependencies